examples/eks-managed-node-group/ingress/imporinox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imporinox-innchat
  namespace: imporinox
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: prod-alpha-07
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-1-2021-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:975049889333:certificate/8881c828-905d-432a-a60d-02669a421df7'
spec:
  rules:
  - host: imporinox-chat.innchat.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: imporinox-chatwoot
            port:
              number: 3000
  - host: imporinox.innchat.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: innchat-studio-frontend-imporinox-svc
            port:
              number: 3001
